# vaachak-os

./: .gitignore  AGENTS.md  AGENTS_phase35_full_addendum.md  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  IMPLEMENTATION.md  PLANS.md  README-APPLY-BOOTSTRAP-PHASE1.3.txt  README-APPLY-BOOTSTRAP-PHASE12.txt  README-APPLY-BOOTSTRAP-PHASE2.txt  README-APPLY-BOOTSTRAP-PHASE4.3.txt  README-APPLY-BOOTSTRAP-PHASE4.4.txt  README-APPLY-BOOTSTRAP-PHASE6.txt  README-APPLY-BOOTSTRAP-PHASE7.2.txt  README-APPLY-BOOTSTRAP-PHASE8.4.txt  README-APPLY-BOOTSTRAP-PHASE8.5.txt  README-APPLY-BOOTSTRAP-PHASE9.1.txt  README-APPLY-BOOTSTRAP-PHASE9.2.txt  README-APPLY-BOOTSTRAP-PHASE9.txt  README.md  ROADMAP.md  SCOPE.md  USERGUIDE.md  codex_prompt_phase30.md  codex_prompt_phase32_34.md  codex_prompt_phase35_full_physical_extraction.md  espflash.toml  plans.md  plans_phase35_full_physical_extraction.md  plans_phase35_physical_extraction.md  rust-toolchain.toml
boards/x4/: Cargo.toml
boards/x4/src/: board.rs  lib.rs  pins.rs
target-xteink-x4/: Cargo.toml  build.rs  espflash.toml
target-xteink-x4/src/: main.rs
target-xteink-x4/src/vaachak_x4/: boot.rs  mod.rs  runtime.rs  runtime_adapter_contracts.rs  ui.rs
target-xteink-x4/src/vaachak_x4/apps/: app_catalog.rs  app_list_model.rs  daily_mantra_app.rs  daily_text.rs  home.rs  manager.rs  mod.rs  reader_state.rs
target-xteink-x4/src/vaachak_x4/contracts/: boundary_contract.rs  boundary_contract_smoke.rs  display.rs  display_backend_native_refresh_command_executor_cleanup_smoke.rs  display_backend_native_refresh_command_executor_smoke.rs  display_backend_native_refresh_shell_cleanup_smoke.rs  display_backend_native_refresh_shell_smoke.rs  display_contract_smoke.rs  display_geometry.rs  display_physical_ssd1677_native_driver_smoke.rs  display_runtime_ownership_smoke.rs  hardware_native_behavior_consolidation_cleanup_smoke.rs  hardware_native_behavior_consolidation_smoke.rs  hardware_physical_full_migration_cleanup_smoke.rs  hardware_physical_full_migration_consolidation_smoke.rs  hardware_runtime_backend_takeover_cleanup_smoke.rs  hardware_runtime_backend_takeover_smoke.rs  hardware_runtime_executor_acceptance_smoke.rs  hardware_runtime_executor_boot_markers_smoke.rs  hardware_runtime_executor_live_handoff_cleanup_smoke.rs  hardware_runtime_executor_live_handoff_smoke.rs  hardware_runtime_executor_observability_smoke.rs  hardware_runtime_executor_runtime_use_cleanup_smoke.rs  hardware_runtime_executor_runtime_use_smoke.rs  hardware_runtime_executor_smoke.rs  hardware_runtime_executor_wiring_smoke.rs  hardware_runtime_ownership_smoke.rs  input.rs  input_backend_native_event_pipeline_cleanup_smoke.rs  input_backend_native_event_pipeline_smoke.rs  input_backend_native_executor_cleanup_smoke.rs  input_backend_native_executor_smoke.rs  input_contract_smoke.rs  input_physical_sampling_native_driver_cleanup_smoke.rs  input_physical_sampling_native_driver_smoke.rs  input_runtime_ownership_smoke.rs  input_semantics.rs  mod.rs  physical_driver_migration_plan_smoke.rs  pulp_hardware_dead_path_quarantine_smoke.rs  (+22 more)
target-xteink-x4/src/vaachak_x4/display/: display_geometry_runtime.rs  mod.rs  redraw_policy_runtime.rs
target-xteink-x4/src/vaachak_x4/imported/: mod.rs  pulp_reader_runtime.rs  x4_reader_runtime.rs
target-xteink-x4/src/vaachak_x4/input/: active_semantic_mapper.rs  input_adc_runtime.rs  input_semantics_runtime.rs
target-xteink-x4/src/vaachak_x4/io/: mod.rs  reader_state_runtime.rs  storage_readonly_adapter.rs  storage_readonly_boundary.rs  storage_readonly_pulp_bridge.rs  storage_readonly_x4_bridge.rs  storage_state.rs  storage_state_adapter.rs  storage_state_runtime.rs
target-xteink-x4/src/vaachak_x4/lua/: board_games.rs  calendar_script.rs  card_games.rs  catalog_bridge.rs  daily_mantra_script.rs  daily_mantra_vm_bridge.rs  dictionary.rs  game_stub_script.rs  grid_games.rs  mod.rs  panchang_script.rs  runtime_probe.rs  sd_manifest_reader_bridge.rs  tool_stub_script.rs  unit_converter.rs  vm_feature_gate.rs
target-xteink-x4/src/vaachak_x4/network/: biscuit_wifi.rs  mod.rs  network_time.rs  upload.html  upload.rs  wifi_scan.rs
target-xteink-x4/src/vaachak_x4/physical/: display_backend_native_refresh_command_executor.rs  display_backend_native_refresh_command_executor_cleanup.rs  display_backend_native_refresh_shell.rs  display_backend_native_refresh_shell_cleanup.rs  display_executor_bridge.rs  display_physical_ssd1677_native_driver.rs  display_pulp_backend.rs  display_runtime_owner.rs  display_x4_backend.rs  hardware_executor_pulp_backend.rs  hardware_native_behavior_consolidation.rs  hardware_native_behavior_consolidation_cleanup.rs  hardware_physical_full_migration_cleanup.rs  hardware_physical_full_migration_consolidation.rs  hardware_runtime_backend.rs  hardware_runtime_backend_pulp.rs  hardware_runtime_backend_takeover.rs  hardware_runtime_backend_takeover_cleanup.rs  hardware_runtime_executor.rs  hardware_runtime_executor_acceptance.rs  hardware_runtime_executor_boot_markers.rs  hardware_runtime_executor_live_handoff.rs  hardware_runtime_executor_live_handoff_cleanup.rs  hardware_runtime_executor_observability.rs  hardware_runtime_executor_runtime_use.rs  hardware_runtime_executor_runtime_use_cleanup.rs  hardware_runtime_executor_wiring.rs  hardware_runtime_observability_pulp_backend.rs  hardware_runtime_ownership.rs  hardware_runtime_wiring_pulp_backend.rs  input_backend_native_event_pipeline.rs  input_backend_native_event_pipeline_cleanup.rs  input_backend_native_executor.rs  input_backend_native_executor_cleanup.rs  input_executor_bridge.rs  input_pulp_backend.rs  (+31 more)
targets/x4/: Cargo.toml
targets/x4/src/: main.rs
(+5730 files in other folders)
