[workspace]
members = [
    "core",
    "hal-xteink-x4",
    "target-xteink-x4",
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT"
authors = ["Piyush Daiya"]

[workspace.dependencies]
heapless = "0.8"
serde = { version = "1", default-features = false, features = ["derive"] }
postcard = { version = "1", default-features = false, features = ["alloc"] }
