[workspace]
members = [
    "core",
    "hal-xteink-x4",
    "target-xteink-x4",
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT"
authors = ["Piyush Daiya"]

[workspace.dependencies]
heapless = { version = "0.8", features = ["serde"] }
serde = { version = "1", default-features = false, features = ["derive"] }
postcard = { version = "1", default-features = false, features = ["alloc"] }
log = "0.4.27"
embedded-hal = "1.0.0"
embedded-hal-bus = "0.3.0"

# Embedded/X4 target dependencies. Pinned to the same ESP crate line that
# worked in the x4-reader-os-rs firmware to avoid silent caret upgrades while
# proving the first VaachakOS ESP32-C3 boot target.
esp-hal = { version = "=1.0.0", features = ["esp32c3", "log-04", "unstable"] }
esp-backtrace = { version = "=0.18.1", features = ["esp32c3", "panic-handler", "println"] }
esp-println = { version = "=0.16.1", features = ["esp32c3", "log-04"] }
esp-alloc = { version = "=0.9.0", features = ["internal-heap-stats"] }
esp-bootloader-esp-idf = { version = "=0.4.0", features = ["esp32c3", "log-04"] }
