[package]
name = "target-xteink-x4"
edition = { workspace = true }
version = { workspace = true }
license = { workspace = true }
authors = { workspace = true }

[dependencies]

[target.'cfg(all(target_arch = "riscv32", target_os = "none"))'.dependencies]
log = "0.4.27"
esp-rtos = { version = "0.2.0", features = ["embassy", "esp32c3", "esp-radio", "log-04"] }
embassy-executor = "0.9"
static_cell = "2.1.1"
esp-alloc = { version = "0.9.0", features = ["internal-heap-stats"] }
vaachak-core = { path = "../core" }
hal-xteink-x4 = { path = "../hal-xteink-x4" }
nb = "1"
pulp-os = { package = "x4-os", path = "../vendor/pulp-os" }
x4-kernel = { path = "../vendor/pulp-os/kernel" }
smol-epub = { path = "../vendor/smol-epub" }
esp-hal = { workspace = true }
esp-backtrace = { workspace = true }
esp-println = { workspace = true }
esp-bootloader-esp-idf = { workspace = true }
embedded-hal-bus = { workspace = true }
embedded-hal = { workspace = true }
embedded-sdmmc = { workspace = true }
