[package]
name = "target-x4"
version = "0.1.0"
edition = "2024"

[dependencies]
embedded-hal = "1.0.0"
esp-backtrace = { version = "0.18.1", features = ["esp32c3", "panic-handler", "println"] }
esp-hal = { version = "1.0.0", features = ["esp32c3"] }
esp-println = { version = "0.16.1", features = ["esp32c3"] }
vaachak-board-x4 = { path = "../../boards/x4" }
vaachak-core = { path = "../../core" }
esp-bootloader-esp-idf = { version = "0.4", features = ["esp32c3"] }